fix: carousel image fix

--- a/index.html
+++ b/index.html
@@ -47,9 +47,6 @@
                         <a class="nav-link me-2" href="index.html">Principal</a>
                     </li> 
                     <li class="nav-item">
-                        <a class="nav-link me-2" href="#contatosFooter">Fale Conosco</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link me-2" href="#nossosProdutos">Produtos</a>
                     </li>
                     <li class="nav-item">
@@ -57,6 +54,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link me-2" href="#nossaEquipe">Nosso Time</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link me-2" href="#contatosFooter">Fale Conosco</a>
                     </li>
                 </ul>    
                 <div class="align-self-end">
@@ -87,16 +87,11 @@
                 <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                <button type="button" data-bs-target="#carouselMain" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active text-center" data-interval="3000">
                     <img src="img/Carousel/Cesta G.jpg" class="img-fluid d-none d-md-block w-100" alt="Promoção cestas e flores natalinas a partir de 69 reais e 99 centavos. Imagem de uma cesta de natal">
                     <img src="img/Carousel/Cesta P.jpg" class="img-fluid d-block d-md-none w-100" alt="Promoção cestas e flores natalinas a partir de 69 reais e 99 centavos. Imagem de uma cesta de natal">
-                </div>
-                <div class="carousel-item text-center" data-interval="3000">
-                    <img src="img/Carousel/Festas G.jpg" class="img-fluid d-none d-md-block w-100" alt="A Floricultura Mistic Rose deseja à todos boas festas.">
-                    <img src="img/Carousel/Festas P.jpg" class="img-fluid d-block d-md-none w-100" alt="A Floricultura Mistic Rose deseja à todos boas festas.">
                 </div>
                 <div class="carousel-item text-center" data-interval="3000">
                     <img src="img/Carousel/Outubro rosa G.jpg" class="img-fluid d-none d-md-block w-100" alt="Promoção de outubro rosa, todas as rosas com desconto. Mulher segurando um buquê de rosas cor de rosa.">
@@ -412,9 +407,9 @@
                         </p>
                     </div>
                     <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <h2 class="mb-4">Redes_Sociais</h2>
+                        <h2 class="mb-4">Redes Sociais</h2>
                         <p class="footerConteudo">
-                            <a href="https://twitter.com" target="_blank" class="text-reset">Twitter</a>
+                            <a href="https://twitter.com" target="_blank" class="text-reset">X (Twitter)</a>
                         </p>
                         <p class="footerConteudo">
                             <a href="https://br.linkedin.com" target="_blank" class="text-reset">LinkedIn</a>
